few minor fixes
- changed colours for schedule (so we can still see the text on hover)
- prizes section is more accurate
- updated startupbus link
- pictures now scroll in a "natural" order (if you want to click on one,
  you can - nothing happens for now though)
- fixed: there was a horizontal scrollbar

--- a/css/colours.sass
+++ b/css/colours.sass
@@ -82,15 +82,14 @@ $link-active: $link
 $link-visited: $link
 $link-focus: $link-hover
 
-$navbar-background: black
+$navbar-background: rgba(0,0,0,0.9)
 
 $logo-red: #990000
 
 $article-bgcolor: black
 $article-side-padding: 10%
 
-$big-subtitle-colour: white
+$big-subtitle-colour: #f3f3f3
 
 $main-font: "NexaBold"
 $second-font: "Akashi"
-
