--- a/css/schedule.sass
+++ b/css/schedule.sass
@@ -7,7 +7,7 @@ $schedule-header-height: 80px
 	overflow: hidden
 	padding-top: 20px
 
-.date 
+.date
 	width: 100%
 	height: $schedule-header-height
 	padding-bottom: 30px
@@ -33,13 +33,13 @@ $schedule-header-height: 80px
 
 .schedule-entry
 	+clearfix
-	:margin 5px 10px 0 0 
+	:margin 5px 10px 0 0
 	:border-radius 4px
 
 	&:hover
-		background: lighten($big-subtitle-colour,50%)
-		-webkit-transform:  scale(1.1)
-		margin-left: 20px
+		background: darken($big-subtitle-colour,30%)
+		// hack:
+		color: #333
 
 	div
 		float: left
@@ -52,5 +52,3 @@ $schedule-header-height: 80px
 		color: black
 		text-decoration: none
 		font-weight: bold
-
-
